--- a/home.html
+++ b/home.html
@@ -1,2 +1,12 @@
-Welcome to my website
-This is the about page.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Home Page</h1>
+    <p>Welcome to the home page!</p>
+</body>
+</html>
